# simexec

./: .pre-commit-config.yaml  Convex_Hull.py  README.rst  chemview.ipynb  lammps_simulator.py  mp_example.py  mp_structure.ipynb  pyproject.toml  simulator.py
Fast_API/: api.py  db_query_builder.py
data_wrapper/: MpWrapper.py  NomadWrapper.py  OqWrapper.py  __init__.py  mysql_db.py  search_db.py
examples/: GpyOpt.py  MgAl.csv  MgAl.py  example.py  launch_lammps_optimization_fe.py  res.csv
lammps/: db_query.py
lammps/examples/: launch_lammps_optimization_gan.py  launch_lammps_optimization_lj.py
lammps/potentials/: Ag_u3.eam  Al-Mg.eam.fs  AlCu.eam.alloy  AlFe_mm.eam.fs  AlO.eam.alloy  AlSiMgCuFe.meam  Al_jnp.eam  Al_mm.eam.fs  Al_prb.agni  BNC.tersoff  BNCH-old.ILP  BNCH.ILP  BNC_MBD_bulk.ILP  C.lcbop  CC.KC  CC.KC-full  CC.Lebedeva  CH.KC  CH.airebo  CH.airebo-m  CH.rebo  CH_taper.KC  CdTe.sw  CdTeZnSeHgS0.sw  CdZnTe_v1.bop.table  CoAl.eam.alloy  CuTa.eam.alloy  CuZr_mm.eam.fs  FeCr.cdeam  FeP_mm.eam.fs  Fe_mm.eam.fs  GaN.sw  Ge.tersoff  He_He_JW2013.table  InP.vashishta  MOH.nb3b.harmonic  Mg_mm.eam.fs  Mo5.2.mgpt.README  Mo5.2.mgpt.parmin  Mo_Chen_PRM2017.snap  (+63 more)
lammps_executor/: Convex_Hull.py
tests/: Cu.meam  CuNi.eam.alloy  CuNi_optimize_aiida.py  CuPt.meam  Cu_Ase_Lammps.py  Ni.meam  NiAlH_jea.eam.alloy  Ni_Ase_Lammps.py  lammps_executor_test.py  library.Cu.meam  library.Ni.meam  library.meam  test_Cu.py  test_CuNi_optimize_aiida.py  test_Ni.py  test_lammps_executor.py
tests/examples/: launch_dynaphopy_si.py  launch_lammps_combinate.py  launch_lammps_force_gan.py  launch_lammps_md_si.py
utils/: __init__.py  files.py  log.py
utils/potentials/: almg.liu.eam.alloy
vasp/examples/: run_bands.py  run_converge.py  run_relax.py  run_vasp_lean.py  run_vasp_prep_w90.py
